// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator dbml {
  provider            = "prisma-dbml-generator"
  outputName          = "punto6.dbml"
  projectName         = "punto 6 - sistema de cobro"
  projectDatabaseType = "PostgreSQL"
  //https://dbdiagram.io/d
}

datasource db {
  provider = "postgresql"
  url      = "postgresql://postgres:postgres@lab.vitico.space:31132/ingsoft?schema=punto6"
}

model Persona {
  idPersona Int       @id @default(autoincrement())
  nombre    String
  apellido  String
  sexo      String
  Cliente   Cliente[]
}

model Cliente {
  persona     Persona       @relation(fields: [idPersona], references: [idPersona])
  idPersona   Int           @id
  estado      Boolean
  Solicitudes Solicitudes[]
}

model TipoPrestamo {
  idTipoPrestamo Int           @id @default(autoincrement())
  descripcion    String
  tasamin        Float
  tasamax        Float
  Solicitudes    Solicitudes[]
}

model TipoPago {
  idTipoPago  Int           @id @default(autoincrement())
  descripcion String
  Solicitudes Solicitudes[]
}

model Seguro {
  idSeguro    Int           @id @default(autoincrement())
  descripcion String
  Solicitudes Solicitudes[]
}

model Solicitudes {
  idSolicitud                Int                   @id @default(autoincrement())
  cliente                    Cliente               @relation(fields: [clienteIdPersona], references: [idPersona])
  tipoPrestamo               TipoPrestamo          @relation(fields: [tipoPrestamoIdTipoPrestamo], references: [idTipoPrestamo])
  tipoPago                   TipoPago              @relation(fields: [tipoPagoIdTipoPago], references: [idTipoPago])
  seguro                     Seguro                @relation(fields: [seguroIdSeguro], references: [idSeguro])
  descripcion                String
  monto                      Float
  fecha                      DateTime
  clienteIdPersona           Int
  tipoPrestamoIdTipoPrestamo Int
  tipoPagoIdTipoPago         Int
  seguroIdSeguro             Int
  estado                     EstadoSolicitud
  HistorialTransacion        HistorialTransacion[]
}

enum EstadoSolicitud {
  Pendiente
  Aprobado
  Rechazado
}

model Departamento {
  idDepartamento      Int                   @id @default(autoincrement())
  nombre              String
  HistorialTransacion HistorialTransacion[]
}

model HistorialTransacion {
  idHistorialTransacion      Int          @id @default(autoincrement())
  solicitud                  Solicitudes  @relation(fields: [solicitudesIdSolicitud], references: [idSolicitud])
  departamento               Departamento @relation(fields: [departamentoIdDepartamento], references: [idDepartamento])
  descripcion                String
  monto                      Float
  fecha                      DateTime
  solicitudesIdSolicitud     Int
  departamentoIdDepartamento Int
}
