//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Project "punto 6 - sistema de cobro" {
  database_type: 'PostgreSQL'
  Note: ''
}

Table Persona {
  idPersona Int [pk, increment]
  nombre String [not null]
  apellido String [not null]
  sexo String [not null]
  Cliente Cliente [not null]
}

Table Cliente {
  persona Persona [not null]
  idPersona Int [pk]
  estado Boolean [not null]
  Solicitudes Solicitudes [not null]
}

Table TipoPrestamo {
  idTipoPrestamo Int [pk, increment]
  descripcion String [not null]
  tasamin Float [not null]
  tasamax Float [not null]
  Solicitudes Solicitudes [not null]
}

Table TipoPago {
  idTipoPago Int [pk, increment]
  descripcion String [not null]
  Solicitudes Solicitudes [not null]
}

Table Seguro {
  idSeguro Int [pk, increment]
  descripcion String [not null]
  Solicitudes Solicitudes [not null]
}

Table Solicitudes {
  idSolicitud Int [pk, increment]
  cliente Cliente [not null]
  tipoPrestamo TipoPrestamo [not null]
  tipoPago TipoPago [not null]
  seguro Seguro [not null]
  descripcion String [not null]
  monto Float [not null]
  fecha DateTime [not null]
  clienteIdPersona Int [not null]
  tipoPrestamoIdTipoPrestamo Int [not null]
  tipoPagoIdTipoPago Int [not null]
  seguroIdSeguro Int [not null]
  estado EstadoSolicitud [not null]
  HistorialTransacion HistorialTransacion [not null]
}

Table Departamento {
  idDepartamento Int [pk, increment]
  nombre String [not null]
  HistorialTransacion HistorialTransacion [not null]
}

Table HistorialTransacion {
  idHistorialTransacion Int [pk, increment]
  solicitud Solicitudes [not null]
  departamento Departamento [not null]
  descripcion String [not null]
  monto Float [not null]
  fecha DateTime [not null]
  solicitudesIdSolicitud Int [not null]
  departamentoIdDepartamento Int [not null]
}

Enum EstadoSolicitud {
  Pendiente
  Aprobado
  Rechazado
}

Ref: Cliente.idPersona > Persona.idPersona

Ref: Solicitudes.clienteIdPersona > Cliente.idPersona

Ref: Solicitudes.tipoPrestamoIdTipoPrestamo > TipoPrestamo.idTipoPrestamo

Ref: Solicitudes.tipoPagoIdTipoPago > TipoPago.idTipoPago

Ref: Solicitudes.seguroIdSeguro > Seguro.idSeguro

Ref: HistorialTransacion.solicitudesIdSolicitud > Solicitudes.idSolicitud

Ref: HistorialTransacion.departamentoIdDepartamento > Departamento.idDepartamento